--- a/index.html
+++ b/index.html
@@ -261,39 +261,39 @@
                 <div class="row">
                     <div class="col l-4 m-12 c-12">
                         <div class="project__item">
-                            <div class="project__img" style="background-image: url(./assets/img/pro1.jpg)">
+                            <div class="project__img" style="background-image: url(./assets/img/ds1.jpg)">
                                 
                             </div>
-                            <div class="project__img" style="background-image: url(./assets/img/pro2.jpg)">
+                            <div class="project__img" style="background-image: url(./assets/img/ds2.jpeg)">
 
                             </div>
-                            <div class="project__img" style="background-image: url(./assets/img/pro3.jpg)">
-
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col l-4 m-12 c-12">
-                        <div class="project__item">
-                            <div class="project__img" style="background-image: url(./assets/img/vader1.jpg)">
-
-                            </div>
-                            <div class="project__img" style="background-image: url(./assets/img/revan1.jpg)">
-
-                            </div>
-                            <div class="project__img" style="background-image: url(./assets/img/ren1.jpg)">
+                            <div class="project__img" style="background-image: url(./assets/img/ds3.jpg)">
 
                             </div>
                         </div>
                     </div>
                     <div class="col l-4 m-12 c-12">
                         <div class="project__item">
-                            <div class="project__img" style="background-image: url(./assets/img/archer1.jpg)">
+                            <div class="project__img" style="background-image: url(./assets/img/ds4.jpg)">
 
                             </div>
-                            <div class="project__img" style="background-image: url(./assets/img/sasaki1.jpg)">
+                            <div class="project__img" style="background-image: url(./assets/img/ds5.jpg)">
 
                             </div>
-                            <div class="project__img" style="background-image: url(./assets/img/mus1.jpg)">
+                            <div class="project__img" style="background-image: url(./assets/img/ds6.jpg)">
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col l-4 m-12 c-12">
+                        <div class="project__item">
+                            <div class="project__img" style="background-image: url(./assets/img/ds7.jpg)">
+
+                            </div>
+                            <div class="project__img" style="background-image: url(./assets/img/ds8.jpg)">
+
+                            </div>
+                            <div class="project__img" style="background-image: url(./assets/img/ds9.jpg)">
 
                             </div>
                         </div>
